# mcfly-timemachine

./: .buildconfig  README.md  meson.build
conf/: rsnapshot.conf
data/: com.github.DkGr.mcflys-timemachine.appdata.xml  com.github.DkGr.mcflys-timemachine.appdata.xml.in  com.github.DkGr.mcflys-timemachine.desktop.in  com.github.dkgr.mcflys-timemachine.appdata.xml  com.github.dkgr.mcflys-timemachine.gschema.xml  fr.octeau.elementary.switchboard.backup.in  io.elementary.switchboard.backuprestore.policy.in  meson.build
po/: BackupRestore.pot  POTFILES  com.github.DkGr.mcflys-timemachine.pot  com.github.dkgr.mcflys-timemachine.pot  fr.po
src/: Application  Application.vala  MainView.vala  Permission.vala  Plug.vala  meson.build
src/Backend/: BackupRestoreSettings.vala  MainView  Settings.vala
src/Widgets/: BackupPanel.vala  CategoryItem.vala  CategoryList.vala  GeneralSection.vala  MainView.vala  RestorePanel.vala  SettingLabel.vala
